# qsm-emulation

./: CMakeLists.txt  README.md
src/: bitmanip.hpp  bitmanip_avx.hpp  cacheline.hpp  cacheline_avx.hpp  cw.hpp  cw_avx.hpp  debruijn.hpp  distribution_schedule_v1.hpp  extract_matrix_structure.cpp  machineparams.hpp  mmio.h  mmiowrapper.hpp  read_queue.hpp  spmatrix.hpp  spmv.cpp  spmv_qsm0_duplication_schedule_v1.hpp  spmv_qsm0_duplication_schedule_v2.hpp  spmv_qsm0_execution_schedule_v1.hpp  spmv_test.hpp  spmv_test_qsm0_v1.hpp  spmv_test_qsm0_v2.hpp  spmv_test_temporal_v1.hpp  types.hpp  utility.hpp  write_queue.hpp
